--- a/Homepage.html
+++ b/Homepage.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Page Title</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<h1>HOME PAGE G058</h1>
-<p>This is a paragraph.</p>
+<div class="header">
+    <h1>HOME PAGE G058</h1>   
+</div>
+
+<div class="row">
+    <div class="col-4 col-s-4 menu">
+        <div class="phumintroduce">
+            <p>phum</p>
+        </div>
+    </div>
+
+    <div class="col-4 col-s-8">
+        <div class="teamintroduce">
+            <p>team</p>
+        </div>
+    </div>
+
+    <div class="col-4 col-s-12">
+        <div class="northintroduce">
+            <p>north</p>
+        </div>
+    </div>
+</div>
+
+<div class="footer">
+    <p>อะไรสักอย่าง</p>
+</div>
 
 </body>
 </html>
