--- a/Homepage.html
+++ b/Homepage.html
@@ -12,19 +12,19 @@
 </div>
 
 <div class="row">
-    <div class="col-4 col-s-4 menu">
+    <div class="col-4 col-s-4 phum">
         <div class="phumintroduce">
             <p>phum</p>
         </div>
     </div>
 
-    <div class="col-4 col-s-8">
+    <div class="col-4 col-s-8 team">
         <div class="teamintroduce">
             <p>team</p>
         </div>
     </div>
 
-    <div class="col-4 col-s-12">
+    <div class="col-4 col-s-12 north">
         <div class="northintroduce">
             <p>north</p>
         </div>
