--- a/Homepage.html
+++ b/Homepage.html
@@ -27,6 +27,20 @@
     <div class="col-4 col-s-12 north">
         <div class="northintroduce">
             <p>north</p>
+            <p>ชื่อ : มนัสนันท์ อุดมรัตน์</p>
+            <p>ชื่อเล่น : นอธ</p>
+            <p>student id : 6609650608</p>
+            <p>งานอดิเรก</p>
+            <ul>
+                <li>ฟังเพลง</li>
+                <li>ดูอนิเมะ</li>
+                <li>เล่นเกม</li>
+              </ul>
+            <p>ช่องทางติดต่อ : manatsanan.udo@dome.tu.ac.th</p>
+            <p>หน้าที่ในการทำงาน</p>
+            <ul>
+                <li>...</li>
+            </ul>  
         </div>
     </div>
 </div>
