--- a/Homepage.html
+++ b/Homepage.html
@@ -7,10 +7,16 @@
 </head>
 <body>
 
-<div class="header">
-    <h1>HOME PAGE G058</h1>   
+    <div class="header">
+        <h1>HOME PAGE G58</h1>
+        <!-- เปลี่ยนไปไว้ข้างล่างได้นะๆ ปุ่ม form อ่ะๆๆๆ --> 
+    <div class="f1">
+        <div class="col-3 col-s-3 form">
+          <p><a href="...">form</a></p>
+        </div>    
 </div>
 
+  
 <div class="row">
     <div class="col-4 col-s-4 phum">
         <div class="phumintroduce">
