--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,7 @@
         <!-- เปลี่ยนไปไว้ข้างล่างได้นะๆ ปุ่ม form อ่ะๆๆๆ --> 
     <div class="f1">
         <div class="col-3 col-s-3 form">
-          <p><a href="...">form</a></p>
+          <p><a href="js/indexjs.html">form</a></p>
         </div>    
 </div>
 
