--- a/Homepage.html
+++ b/Homepage.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Page Title</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,18 +20,117 @@
   
 <div class="row">
     <div class="col-4 col-s-4 phum">
-        <div class="phumintroduce">
-            <p>phum</p>
+        <div class="phumpic">
+            <center>
+               <img src="personimg/phum.jpg" alt="รูปภูมิ" height="250px" width="250px">
+            </center>
+        </div>
+        <div class="phum1">
+            <h2>ชื่อ-สกุล</h2>
+            <p>ภูมิภากร โกเมนไปรรินทร์ (Phumphagon Komanpririn)</p>
+            <h2>ชื่อเล่น</h2>
+            <p>ภูมิ (phum)</p>
+            <h2>รหัสนักศึกษา</h2>
+            <p>6609650582</p>
+            <h2>วัน-เดือน-ปีเกิด</h2>
+            <p>11 ตุลาคม พ.ศ.2547</p>
+        </div>
+        <div class="phumhobby">
+            <h2>งานอดิเรก</h2>
+            <ul>
+                <li> ดู Youtube/หนัง </li>
+                <li> เล่นเกมคอมพิวเตอร์ </li>
+                <li> ออกกำลังกาย</li>
+                <li> ฟังเพลง</li>
+            </ul>
+        </div>
+        <div class="phum2">
+            <h2>ช่องทางการติดต่อ</h2>
+            <p>Email:phumphagon.kom@dome.tu.ac.th</p>
+            <center>
+            <a href="https://www.facebook.com/phumphagon" class="fa fa-facebook" target="_blank"></a> <a href="https://www.instagram.com/phum__kpr/" class="fa fa-instagram" target="_blank"></a>
+            </center>
+        </div>
+        <div class="phumwork">
+            <h2>หน้าที่ในการทำproject</h2>
+            <p>เขียนโค้ดภาษาhtmlทั้งหมด</p>
         </div>
     </div>
 
     <div class="col-4 col-s-8 team">
-        <div class="teamintroduce">
-            <p>team</p>
+        <div class="teampic">
+            <center>
+                <img src="personimg/team.jpg" alt="รูปภูมิ" height="250px" width="250px">
+             </center>
+        </div>
+        <div class="team1">
+            <h2>ชื่อ-สกุล</h2>
+            <p>ธิปไตย ศิริรักษ์ (Thippatai Sirirak)</p>
+            <h2>ชื่อเล่น</h2>
+            <p>ทีม (Team)</p>
+            <h2>รหัสนักศึกษา</h2>
+            <p>6609650434</p>
+            <h2>วัน-เดือน-ปีเกิด</h2>
+            <p>3 มกราคม พ.ศ.2547</p>
+        </div>
+        <div class="teamhobby">
+            <h2>งานอดิเรก</h2>
+            <ul>
+                <li> อ่านนิยาย </li>
+                <li> เล่นเกม </li>
+                <li> ดูหนัง</li>
+                <li> ถ่ายรูป</li>
+            </ul>
+        </div>
+        <div class="team2">
+            <h2>ช่องทางการติดต่อ</h2>
+            <p>Email:thippatai.sir@dome.tu.ac.th</p>
+            <center>
+            <a href="https://www.facebook.com/nongteam.sirirak.9" class="fa fa-facebook" target="_blank"></a> <a href="https://www.instagram.com/thippatai8/" class="fa fa-instagram" target="_blank"></a>
+            </center>
+        </div>
+        <div class="teamwork">
+            <h2>หน้าที่ในการทำproject</h2>
+            <p>เขียนโค้ดภาษาJavaScriptทั้งหมด</p>
         </div>
     </div>
 
     <div class="col-4 col-s-12 north">
+        <div class="northpic">
+            <center>
+                <img src="personimg/north.jpg" alt="นอธ" height="250px" width="250px">
+             </center>
+        </div>
+        <div class="north1">
+            <h2>ชื่อ-สกุล</h2>
+            <p>มนัสนันท์ อุดมรัตน์ (Manatsanan Udomrat)</p>
+            <h2>ชื่อเล่น</h2>
+            <p>นอธ (North)</p>
+            <h2>รหัสนักศึกษา</h2>
+            <p>6609650608</p>
+            <h2>วัน-เดือน-ปีเกิด</h2>
+            <p>6 กันยายน พ.ศ.2547</p>
+        </div>
+        <div class="northhobby">
+            <h2>งานอดิเรก</h2>
+            <ul>
+                <li> ฟังเพลง </li>
+                <li> ดูอนิเมะ </li>
+                <li> เล่นเกม</li>
+                <br>
+            </ul>
+        </div>
+        
+        <div class="north2">
+            <h2>ช่องทางการติดต่อ</h2>
+            <p>Email:manatsanan.udo@dome.tu.ac.th</p>
+            <center>
+            <a href="https://www.facebook.com/manatsanan.ud " class="fa fa-facebook" target="_blank" ></a> <a href="https://www.instagram.com/sepn0rth/" class="fa fa-instagram" target="_blank"></a>
+            </center>
+        </div>
+        <div class="northwork">
+            <h2>หน้าที่ในการทำproject</h2>
+            <p>เขียนโค้ดภาษาCSSทั้งหมด</p>
         <div class="northintroduce">
             <p>north</p>
             <p>ชื่อ : มนัสนันท์ อุดมรัตน์</p>
@@ -52,7 +152,12 @@
 </div>
 
 <div class="footer">
-    <p>อะไรสักอย่าง</p>
+    <center>
+    <h1>Our activity </h1>
+    </center>
+    <center>
+    <a href="html/activity.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
+    </center>
 </div>
 
 </body>
