--- a/Homepage.html
+++ b/Homepage.html
@@ -151,7 +151,7 @@
     <h1>Our activity </h1>
     </center>
     <center>
-    <a href="html/activity.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
+    <a href="js/indexjs.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
     </center>
 </div>
 
