--- a/Homepage.html
+++ b/Homepage.html
@@ -17,21 +17,21 @@
     <div class="col-4 col-s-4 phum">
         <div class="phumpic">
             <center>
-               <img src="personimg/phum.jpg" alt="รูปภูมิ" height="250px" width="250px">
+               <img src="personimg/phum.jpg" alt="รูปภูมิ" height="280px" width="270px">
             </center>
         </div>
         <div class="phum1">
-            <h2>ชื่อ-สกุล</h2>
+            <h3>ชื่อ-สกุล</h3>
             <p>ภูมิภากร โกเมนไปรรินทร์ (Phumphagon Komanpririn)</p>
-            <h2>ชื่อเล่น</h2>
+            <h3>ชื่อเล่น</h3>
             <p>ภูมิ (phum)</p>
-            <h2>รหัสนักศึกษา</h2>
+            <h3>รหัสนักศึกษา</h3>
             <p>6609650582</p>
-            <h2>วัน-เดือน-ปีเกิด</h2>
+            <h3>วัน-เดือน-ปีเกิด</h3>
             <p>11 ตุลาคม พ.ศ.2547</p>
         </div>
         <div class="phumhobby">
-            <h2>งานอดิเรก</h2>
+            <h3>งานอดิเรก</h3>
             <ul>
                 <li> ดู Youtube/หนัง </li>
                 <li> เล่นเกมคอมพิวเตอร์ </li>
@@ -40,36 +40,36 @@
             </ul>
         </div>
         <div class="phum2">
-            <h2>ช่องทางการติดต่อ</h2>
-            <p>Email:phumphagon.kom@dome.tu.ac.th</p>
+            <h3>ช่องทางการติดต่อ</h3>
+            <p>Email : phumphagon.kom@dome.tu.ac.th</p>
             <center>
             <a href="https://www.facebook.com/phumphagon" class="fa fa-facebook" target="_blank"></a> <a href="https://www.instagram.com/phum__kpr/" class="fa fa-instagram" target="_blank"></a>
             </center>
         </div>
         <div class="phumwork">
-            <h2>หน้าที่ในการทำproject</h2>
-            <p>เขียนโค้ดภาษาhtmlทั้งหมด</p>
+            <h3>หน้าที่ในการทำ project</h3>
+            <p>เขียนโค้ดภาษา html ทั้งหมด</p>
         </div>
     </div>
 
     <div class="col-4 col-s-8 team">
         <div class="teampic">
             <center>
-                <img src="personimg/team.jpg" alt="รูปภูมิ" height="250px" width="250px">
+                <img src="personimg/team.jpg" alt="รูปภูมิ" height="280px" width="250px">
              </center>
         </div>
         <div class="team1">
-            <h2>ชื่อ-สกุล</h2>
+            <h3>ชื่อ-สกุล</h3>
             <p>ธิปไตย ศิริรักษ์ (Thippatai Sirirak)</p>
-            <h2>ชื่อเล่น</h2>
+            <h3>ชื่อเล่น</h3>
             <p>ทีม (Team)</p>
-            <h2>รหัสนักศึกษา</h2>
+            <h3>รหัสนักศึกษา</h3>
             <p>6609650434</p>
-            <h2>วัน-เดือน-ปีเกิด</h2>
+            <h3>วัน-เดือน-ปีเกิด</h3>
             <p>3 มกราคม พ.ศ.2547</p>
         </div>
         <div class="teamhobby">
-            <h2>งานอดิเรก</h2>
+            <h3>งานอดิเรก</h3>
             <ul>
                 <li> อ่านนิยาย </li>
                 <li> เล่นเกม </li>
@@ -78,36 +78,36 @@
             </ul>
         </div>
         <div class="team2">
-            <h2>ช่องทางการติดต่อ</h2>
-            <p>Email:thippatai.sir@dome.tu.ac.th</p>
+            <h3>ช่องทางการติดต่อ</h3>
+            <p>Email : thippatai.sir@dome.tu.ac.th</p>
             <center>
             <a href="https://www.facebook.com/nongteam.sirirak.9" class="fa fa-facebook" target="_blank"></a> <a href="https://www.instagram.com/thippatai8/" class="fa fa-instagram" target="_blank"></a>
             </center>
         </div>
         <div class="teamwork">
-            <h2>หน้าที่ในการทำproject</h2>
-            <p>เขียนโค้ดภาษาJavaScriptทั้งหมด</p>
+            <h3>หน้าที่ในการทำ project</h3>
+            <p>เขียนโค้ดภาษา JavaScript ทั้งหมด</p>
         </div>
     </div>
 
     <div class="col-4 col-s-12 north">
         <div class="northpic">
             <center>
-                <img src="personimg/north.jpg" alt="นอธ" height="250px" width="250px">
+                <img src="personimg/north.jpg" alt="นอธ" height="280px" width="250px">
              </center>
         </div>
         <div class="north1">
-            <h2>ชื่อ-สกุล</h2>
+            <h3>ชื่อ-สกุล</h3>
             <p>มนัสนันท์ อุดมรัตน์ (Manatsanan Udomrat)</p>
-            <h2>ชื่อเล่น</h2>
+            <h3>ชื่อเล่น</h3>
             <p>นอธ (North)</p>
-            <h2>รหัสนักศึกษา</h2>
+            <h3>รหัสนักศึกษา</h3>
             <p>6609650608</p>
-            <h2>วัน-เดือน-ปีเกิด</h2>
+            <h3>วัน-เดือน-ปีเกิด</h3>
             <p>6 กันยายน พ.ศ.2547</p>
         </div>
         <div class="northhobby">
-            <h2>งานอดิเรก</h2>
+            <h3>งานอดิเรก</h3>
             <ul>
                 <li> ฟังเพลง </li>
                 <li> ดูอนิเมะ </li>
@@ -117,42 +117,27 @@
         </div>
         
         <div class="north2">
-            <h2>ช่องทางการติดต่อ</h2>
-            <p>Email:manatsanan.udo@dome.tu.ac.th</p>
+            <h3>ช่องทางการติดต่อ</h3>
+            <p>Email : manatsanan.udo@dome.tu.ac.th</p>
             <center>
             <a href="https://www.facebook.com/manatsanan.ud " class="fa fa-facebook" target="_blank" ></a> <a href="https://www.instagram.com/sepn0rth/" class="fa fa-instagram" target="_blank"></a>
             </center>
         </div>
         <div class="northwork">
-            <h2>หน้าที่ในการทำproject</h2>
-            <p>เขียนโค้ดภาษาCSSทั้งหมด</p>
-        <div class="northintroduce">
-            <p>north</p>
-            <p>ชื่อ : มนัสนันท์ อุดมรัตน์</p>
-            <p>ชื่อเล่น : นอธ</p>
-            <p>student id : 6609650608</p>
-            <p>งานอดิเรก</p>
-            <ul>
-                <li>ฟังเพลง</li>
-                <li>ดูอนิเมะ</li>
-                <li>เล่นเกม</li>
-              </ul>
-            <p>ช่องทางติดต่อ : manatsanan.udo@dome.tu.ac.th</p>
-            <p>หน้าที่ในการทำงาน</p>
-            <ul>
-                <li>...</li>
-            </ul>  
-        </div>
+            <h3>หน้าที่ในการทำ project</h3>
+            <p>เขียนโค้ดภาษา CSS ทั้งหมด</p>
     </div>
-</div>
+   </div>
+   </div>
+
 
 <div class="footer">
+    <h2 style="text-align: center;"><br>Our activity <br></h2>
+
     <center>
-    <h1>Our activity </h1>
+        <a href="js/indexjs.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
     </center>
-    <center>
-    <a href="js/indexjs.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
-    </center>
+    
 </div>
 
 </body>
