--- a/js/indexjs.html
+++ b/js/indexjs.html
@@ -99,8 +99,18 @@
 
       <!-- Submit Button -->
       <div class="form-group">
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" id="submit" />
       </div>
+      <div class="form-group">
+        <p class="out1" id="out1"></p>
+        <p class="out2" id="out2"></p>
+        <p class="out3" id="out3"></p>
+        <p class="out4" id="out4"></p>
+        <p class="out5" id="out5"></p>
+        <p class="out6" id="out6"></p>
+        <p class="out7" id="out7"></p>
+        <p class="out8" id="out8"></p>
+        </div>
     </form>
   </div>
 
