--- a/js/indexjs.html
+++ b/js/indexjs.html
@@ -42,12 +42,12 @@
         <label for="activityType">Type of Activity</label>
         <select id="activityType" name="activityType">
           <option value="" disabled selected>Select an Activity</option>
-          <option value="" Orientation>ปฐมนิเทศ (Orientation)</option>
-          <option value="" FirstMeet TU>รับเพื่อนใหม่(Firstmeet)</option>
-          <option value="" Halloween>วันฮาโลวีน (Halloween day)</option>
-          <option Value="" Freshy Game>เฟรชชี่เกม (Freshy Game)</option>
-          <option Value="" Loy krathong>วันลอยกระทง (Freshy Game)</option>
-          <option Value="" Other>กิจกรรมอื่นๆ (Other)</option>
+          <option value="ปฐมนิเทศ (Orientation)" Orientation>ปฐมนิเทศ (Orientation)</option>
+          <option value="รับเพื่อนใหม่(Firstmeet)" FirstMeet TU>รับเพื่อนใหม่(Firstmeet)</option>
+          <option value="วันฮาโลวีน (Halloween day)" Halloween>วันฮาโลวีน (Halloween day)</option>
+          <option Value="เฟรชชี่เกม (Freshy Game)" Freshy Game>เฟรชชี่เกม (Freshy Game)</option>
+          <option Value="วันลอยกระทง (Freshy Game)" Loy krathong>วันลอยกระทง (Freshy Game)</option>
+          <option Value="กิจกรรมอื่นๆ (Other)" Other>กิจกรรมอื่นๆ (Other)</option>
         </select>
         <small>If select Other activity please write that activity in Feelings about the activity</small>
       </div>
