--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <h2 style="text-align: center;"><br>Our activity <br></h2>
 
     <center>
-        <a href="js/indexjs.html" target="_blank"> <img src="imgbla/ปุ่มสวย.png" alt="ปุ่ม" width="60" height="70"></a>
+        <a href="js/indexjs.html" target="_blank"> <img src="imgbla/btn1.png" alt="ปุ่ม" width="60" height="70"></a>
     </center>
     
 </div>
